samples/_failures_safe/1761258999_5a594d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f6cf2f8.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected expression at end of input
  156 |                     dist[v] = dist[min_index] +
      |                     ^~~~
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8f6cf2f8.c:156:21: error: expected declaration or statement at end of input
